--- a/requirements.txt
+++ b/requirements.txt
@@ -6,9 +6,9 @@
 #
 
 -i https://pypi.org/simple
-asgiref==3.5.1; python_version >= '3.7'
+asgiref==3.5.1; 
 django==4.0.3
 gunicorn==20.1.0
-setuptools==62.2.0; python_version >= '3.7'
-sqlparse==0.4.2; python_version >= '3.5'
+setuptools==62.2.0;
+sqlparse==0.4.2;
 whitenoise==6.1.0
