--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
-  "name": "ecommerce",
-  "proxy": "http://127.0.0.1:8000",
+  "name": "samdevresources",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -14,19 +13,16 @@
     "react": "^17.0.2",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^17.0.2",
-    "react-redux": "^8.0.2",
+    "react-dotenv": "^0.1.3",
     "react-router-bootstrap": "^0.26.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
-    "redux": "^4.2.0",
-    "redux-devtools-extension": "^2.13.9",
-    "redux-thunk": "^2.4.1",
     "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "react-dotenv && react-scripts start",
+    "build": "react-dotenv && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -46,6 +42,11 @@
       "last 1 chrome version",
       "last 1 firefox version",
       "last 1 safari version"
+    ]
+  },
+  "react-dotenv": {
+    "whitelist": [
+      "REACT_APP_API"
     ]
   }
 }
