--- a/package.json
+++ b/package.json
@@ -1,54 +1,32 @@
 {
-  "name": "samdevresources",
-  "version": "0.1.0",
+  "name": "cds",
   "private": true,
-  "dependencies": {
-    "@reduxjs/toolkit": "^1.8.5",
-    "@sanity/client": "^6.0.1",
-    "@sanity/image-url": "^1.0.2",
-    "@testing-library/jest-dom": "^5.16.2",
-    "@testing-library/react": "^12.1.3",
-    "@testing-library/user-event": "^13.5.0",
-    "axios": "^0.27.2",
-    "bootstrap": "^5.2.0",
-    "bootstrap-icons": "^1.9.1",
-    "react": "^17.0.2",
-    "react-bootstrap": "^2.5.0",
-    "react-dom": "^17.0.2",
-    "react-dotenv": "^0.1.3",
-    "react-router-bootstrap": "^0.26.2",
-    "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.0",
-    "styled-components": "^5.3.5",
-    "web-vitals": "^2.1.4"
-  },
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
-    "start": "react-dotenv && react-scripts start",
-    "build": "react-dotenv && react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "dev": "vite",
+    "build": "vite build",
+    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
+    "preview": "vite preview"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+  "dependencies": {
+    "@sanity/client": "6.0.1",
+    "@sanity/image-url": "1.0.2",
+    "bootstrap": "5.2.0",
+    "bootstrap-icons": "1.9.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-dotenv": "^0.1.3",
+    "react-router-dom": "^6.23.1"
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "react-dotenv": {
-    "whitelist": [
-      "REACT_APP_API"
-    ]
+  "devDependencies": {
+    "@types/react": "^18.2.66",
+    "@types/react-dom": "^18.2.22",
+    "@vitejs/plugin-react": "^4.2.1",
+    "eslint": "^8.57.0",
+    "eslint-plugin-react": "^7.34.1",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.6",
+    "vite": "^5.2.0"
   }
 }
