refactor: Clean up and optimize database seeding and migration scripts
- Removed unnecessary console logs from the clear and seed database function for cleaner output.
- Updated migration script comments for clarity and removed redundant logging.
- Simplified resource creation logic by ensuring source IDs are handled correctly.
- Deleted unused seed data imports and functions to streamline the codebase.
- Adjusted resource type and source management functions to improve efficiency and maintainability.

--- a/package.json
+++ b/package.json
@@ -7,9 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview",
-    "seed:resources:dev": "npx convex run resources:seedResourcesFromJson",
-    "seed:resources:prod": "npx convex run --prod resources:seedResourcesFromJson"
+    "preview": "vite preview"
   },
   "dependencies": {
     "@sanity/client": "6.0.1",
