--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "engines": {
+    "node": ">=24.13.0",
+    "npm": ">=11.9.0"
+  },
   "scripts": {
     "dev": "vite",
     "build": "vite build",
